--- a/stearndesigns-site/index.html
+++ b/stearndesigns-site/index.html
@@ -85,18 +85,18 @@
       <a class="btn btn--ghost" href="portfolio.html">See all</a>
     </div>
     <div class="grid-6">
-      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj1.jpg"><div class="tile__meta"><h3>Glow App</h3><p>Product · UI/UX</p></div></a></article>
-      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj2.jpg"><div class="tile__meta"><h3>North Brew</h3><p>Brand · Packaging</p></div></a></article>
-      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj3.jpg"><div class="tile__meta"><h3>Arc Studio</h3><p>Website · Motion</p></div></a></article>
-      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj4.jpg"><div class="tile__meta"><h3>Kwench</h3><p>Campaign · Social</p></div></a></article>
-      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj5.jpg"><div class="tile__meta"><h3>Beacon</h3><p>Brand · Strategy</p></div></a></article>
-      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj6.jpg"><div class="tile__meta"><h3>Vista Labs</h3><p>3D · Motion</p></div></a></article>
+      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj1.jpg"><div class="tile__meta"><h3>Project 1</h3><p>Product · UI/UX</p></div></a></article>
+      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj2.jpg"><div class="tile__meta"><h3>Project 2</h3><p>Brand · Packaging</p></div></a></article>
+      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj3.jpg"><div class="tile__meta"><h3>Project 3</h3><p>Website · Motion</p></div></a></article>
+      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj4.jpg"><div class="tile__meta"><h3>Project 4</h3><p>Campaign · Social</p></div></a></article>
+      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj5.jpg"><div class="tile__meta"><h3>Project 5</h3><p>Brand · Strategy</p></div></a></article>
+      <article class="tile"><a href="#"><img class="tile__img" src="assets/proj6.jpg"><div class="tile__meta"><h3>Project 6</h3><p>3D · Motion</p></div></a></article>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="wrap">
-    <small>© 2025 YourStudio. All rights reserved.</small>
+    <small>© 2025 Stearn Designs. All rights reserved.</small>
   </footer>
 
   <script src="script.js"></script>
