--- a/stearndesigns-site/index.html
+++ b/stearndesigns-site/index.html
@@ -95,8 +95,8 @@
   </section>
 
   <!-- Footer -->
-  <footer class="wrap">
-    <small>© 2025 Stearn Designs. All rights reserved.</small>
+  <footer>
+    <small>© 2025 YourStudio. All rights reserved.</small>
   </footer>
 
   <script src="script.js"></script>
