--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
   <!-- HERO -->
   <section class="hero">
-    <video autoplay muted loop playsinline preload="metadata" poster="assets/hero-poster.jpg">
-      <source src="assets/here-showreel.mp4" type="video/mp4">
+    <video class="hero__video" autoplay muted loop playsinline preload="metadata" poster="assets/hero-poster.jpg">
+      <source src="assets/hero-showreel.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+    <div class="hero__overlay"></div>
     <div class="hero__content wrap">
       <div class="eyebrow">Design · Motion · Web</div>
       <h1>Creative that moves people.</h1>
@@ -113,3 +114,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
