--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- HERO -->
   <section class="hero">
-    <video class="hero__video" autoplay muted loop playsinline preload="metadata" poster="assets/hero-poster.jpg">
+    <video class="hero__video" autoplay muted loop playsinline preload="metadata">
       <source src="assets/hero-showreel.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
