--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- HERO -->
   <section class="hero">
     <video class="hero__video" autoplay muted loop playsinline preload="metadata">
-      <source src="assets/hero-showreel.mp4" type="video/mp4">
+      <source src="assets/showreel-test.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="hero__overlay"></div>
