--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- HERO -->
   <section class="hero" id="hero">
     <video id="heroVideo" class="hero__video" autoplay muted loop playsinline preload="metadata" poster="assets/hero-poster.jpg" aria-hidden="true">
-      <source src="assets/showreel-test.mp4" type="video/mp4">
+      <source src="assets/showreel.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
