--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@
       <div class="ticker__item">Now booking Q4 projects</div>
       <div class="ticker__item">Award-winning visuals & brand systems</div>
       <div class="ticker__item">Based in the UK · Working worldwide</div>
+
+      <!-- duplicate for seamless looping -->
+      <div class="ticker__item">Now booking Q4 projects</div>
+      <div class="ticker__item">Award-winning visuals & brand systems</div>
+      <div class="ticker__item">Based in the UK · Working worldwide</div>
+      <div class="ticker__item">Now booking Q4 projects</div>
+      <div class="ticker__item">Award-winning visuals & brand systems</div>
+      <div class="ticker__item">Based in the UK · Working worldwide</div>
     </div>
   </div>
+
 
   <!-- Header / Nav -->
   <header>
