--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section class="features wrap">
     <div class="grid-3">
       <article class="card">
-        <img class="card__img" src="assets/brand.jpg" alt="Brand work">
+        <img class="card__img" src="assets/iStock-1191609321.jpg" alt="Brand work">
         <div class="card__body">
           <h3 class="card__title">Brand Systems</h3>
           <p class="card__text">Logo suites, guidelines, and assets for cohesive storytelling.</p>
