--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </article>
       <article class="card">
-        <img class="card__img" src="assets/motion.jpg" alt="Motion content">
+        <img class="card__img" src="assets/iStock-2148382134.jpg" alt="Motion content">
         <div class="card__body">
           <h3 class="card__title">Content & Motion</h3>
           <p class="card__text">Short-form edits, reels, and product visuals for growth.</p>
