--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </article>
       <article class="card">
-        <img class="card__img" src="assets/web.jpg" alt="Web & UI work">
+        <img class="card__img" src="assets/iStock-2155008525.jpg" alt="Web & UI work">
         <div class="card__body">
           <h3 class="card__title">Web & UI</h3>
           <p class="card__text">Fast, accessible sites with motion that feels alive.</p>
