--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
   <section class="features wrap">
     <div class="grid-3">
       <article class="card">
-        <img class="card__img" src="assets/iStock-1191609321.jpg" alt="Brand work">
+        <img class="card__img" src="branding.png" alt="Brand work">
         <div class="card__body">
           <h3 class="card__title">Brand Systems</h3>
           <p class="card__text">Logo suites, guidelines, and assets for cohesive storytelling.</p>
         </div>
       </article>
       <article class="card">
-        <img class="card__img" src="assets/iStock-2155008525.jpg" alt="Web & UI work">
+        <img class="card__img" src="assets/web-design.png" alt="Web & UI work">
         <div class="card__body">
           <h3 class="card__title">Web & UI</h3>
           <p class="card__text">Fast, accessible sites with motion that feels alive.</p>
         </div>
       </article>
       <article class="card">
-        <img class="card__img" src="assets/iStock-2148382134.jpg" alt="Motion content">
+        <img class="card__img" src="assets/motion.png" alt="Motion content">
         <div class="card__body">
           <h3 class="card__title">Content & Motion</h3>
           <p class="card__text">Short-form edits, reels, and product visuals for growth.</p>
