--- a/index.html
+++ b/index.html
@@ -19,20 +19,18 @@
   <!-- Top Scrolling Banner -->
   <div class="ticker">
     <div class="ticker__track">
-      <div class="ticker__item">Now booking Q4 projects</div>
-      <div class="ticker__item">Award-winning visuals & brand systems</div>
-      <div class="ticker__item">Based in the UK · Working worldwide</div>
-      <div class="ticker__item">Now booking Q4 projects</div>
-      <div class="ticker__item">Award-winning visuals & brand systems</div>
-      <div class="ticker__item">Based in the UK · Working worldwide</div>
+      <div class="ticker__item">Get in Touch With Your Projects</div>
+      <div class="ticker__item">Comprehensive Branding Systems</div>
+      <div class="ticker__item">Based in the UK</div>
+      <div class="ticker__item">Professional Web Design</div>
+      <div class="ticker__item">Social Media Management</div>
 
       <!-- duplicate for seamless looping -->
-      <div class="ticker__item">Now booking Q4 projects</div>
-      <div class="ticker__item">Award-winning visuals & brand systems</div>
-      <div class="ticker__item">Based in the UK · Working worldwide</div>
-      <div class="ticker__item">Now booking Q4 projects</div>
-      <div class="ticker__item">Award-winning visuals & brand systems</div>
-      <div class="ticker__item">Based in the UK · Working worldwide</div>
+      <div class="ticker__item">Get in Touch With Your Projects</div>
+      <div class="ticker__item">Comprehensive Branding Systems</div>
+      <div class="ticker__item">Based in the UK</div>
+      <div class="ticker__item">Professional Web Design</div>
+      <div class="ticker__item">Social Media Management</div>
     </div>
   </div>
 
@@ -79,22 +77,22 @@
       <article class="card">
         <img class="card__img" src="branding.png" alt="Brand work">
         <div class="card__body">
-          <h3 class="card__title">Brand Systems</h3>
-          <p class="card__text">Logo suites, guidelines, and assets for cohesive storytelling.</p>
+          <h3 class="card__title">Comprehensive Branding</h3>
+          <p class="card__text">Striking logos, Brand guidelines and systems all backed by expert visual communiaction.</p>
         </div>
       </article>
       <article class="card">
         <img class="card__img" src="assets/web-design.png" alt="Web & UI work">
         <div class="card__body">
-          <h3 class="card__title">Web & UI</h3>
-          <p class="card__text">Fast, accessible sites with motion that feels alive.</p>
+          <h3 class="card__title">Web Design & UI</h3>
+          <p class="card__text">Professional Web and UI design, crafted for a high quality user experience.</p>
         </div>
       </article>
       <article class="card">
         <img class="card__img" src="assets/motion.png" alt="Motion content">
         <div class="card__body">
-          <h3 class="card__title">Content & Motion</h3>
-          <p class="card__text">Short-form edits, reels, and product visuals for growth.</p>
+          <h3 class="card__title">Motion & Animation</h3>
+          <p class="card__text">Keep on trend with short form social media content, or make an impression with distinctive, on-brand animations.</p>
         </div>
       </article>
     </div>
