--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     </div>
   </section>
 
-  <!-- Three Features -->
+  <!-- Four Features -->
   <section class="features wrap">
-    <div class="grid-3">
+    <div class="grid-4">
       <article class="card">
-        <img class="card__img" src="branding.png" alt="Brand work">
+        <img class="card__img" src="assets/branding.png" alt="Brand work">
         <div class="card__body">
           <h3 class="card__title">Comprehensive Branding</h3>
           <p class="card__text">Striking logos, Brand guidelines and systems all backed by expert visual communiaction.</p>
@@ -93,6 +93,14 @@
         <div class="card__body">
           <h3 class="card__title">Motion & Animation</h3>
           <p class="card__text">Keep on trend with short form social media content, or make an impression with distinctive, on-brand animations.</p>
+        </div>
+      </article>
+       </article>
+      <article class="card">
+        <img class="card__img" src="assets/social-media.png" alt="Social Media">
+        <div class="card__body">
+          <h3 class="card__title">Social Media Management</h3>
+          <p class="card__text">Take the hassle out of social media design and scheduling.</p>
         </div>
       </article>
     </div>
