--- a/index.html
+++ b/index.html
@@ -71,39 +71,51 @@
     </div>
   </section>
 
-  <!-- Four Features -->
-  <section class="features wrap">
-    <div class="grid-4">
-      <article class="card">
-        <img class="card__img" src="assets/branding.png" alt="Brand work">
-        <div class="card__body">
-          <h3 class="card__title">Comprehensive Branding</h3>
-          <p class="card__text">Striking logos, Brand guidelines and systems all backed by expert visual communiaction.</p>
-        </div>
-      </article>
-      <article class="card">
-        <img class="card__img" src="assets/web-design.png" alt="Web & UI work">
-        <div class="card__body">
-          <h3 class="card__title">Web Design & UI</h3>
-          <p class="card__text">Professional Web and UI design, crafted for a high quality user experience.</p>
-        </div>
-      </article>
-      <article class="card">
-        <img class="card__img" src="assets/motion.png" alt="Motion content">
-        <div class="card__body">
-          <h3 class="card__title">Motion & Animation</h3>
-          <p class="card__text">Keep on trend with short form social media content, or make an impression with distinctive, on-brand animations.</p>
-        </div>
-      </article>
-      <article class="card">
-        <img class="card__img" src="assets/social-media.png" alt="Social Media">
-        <div class="card__body">
-          <h3 class="card__title">Social Media Management</h3>
-          <p class="card__text">Take the hassle out of social media design and scheduling.</p>
-        </div>
-      </article>
-    </div>
-  </section>
+<!-- Five Features -->
+<section class="features wrap">
+  <div class="grid-5">
+    <article class="card">
+      <img class="card__img" src="assets/branding.png" alt="Brand work">
+      <div class="card__body">
+        <h3 class="card__title">Comprehensive Branding</h3>
+        <p class="card__text">Striking logos, brand guidelines and systems backed by expert visual communication.</p>
+      </div>
+    </article>
+
+    <article class="card">
+      <img class="card__img" src="assets/web-design.png" alt="Web & UI work">
+      <div class="card__body">
+        <h3 class="card__title">Web Design & UI</h3>
+        <p class="card__text">Professional web and UI design, crafted for a high-quality user experience.</p>
+      </div>
+    </article>
+
+    <article class="card">
+      <img class="card__img" src="assets/motion.png" alt="Motion content">
+      <div class="card__body">
+        <h3 class="card__title">Motion & Animation</h3>
+        <p class="card__text">Stay on trend with short-form social content or make an impression with distinctive, on-brand animations.</p>
+      </div>
+    </article>
+
+    <article class="card">
+      <img class="card__img" src="assets/social-media.png" alt="Social Media">
+      <div class="card__body">
+        <h3 class="card__title">Social Media Management</h3>
+        <p class="card__text">Take the hassle out of social media design and scheduling.</p>
+      </div>
+    </article>
+
+    <article class="card">
+      <img class="card__img" src="assets/strategy.png" alt="Strategy">
+      <div class="card__body">
+        <h3 class="card__title">Poster & Cover Art</h3>
+        <p class="card__text">Effective standalone graphics for any business.</p>
+      </div>
+    </article>
+  </div>
+</section>
+
 
   <!-- Six Projects -->
   <section class="projects wrap">
