--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 <!-- Five Features -->
 <section class="features wrap">
+  <h2 class="section-title dynamic-title">What I Do</h2>
   <div class="grid-5">
     <article class="card">
       <img class="card__img" src="assets/branding.png" alt="Brand work">
