--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Header / Nav -->
   <header>
     <div class="wrap nav">
-      <div class="logo_img" src= assets/stearn-designs-logo.pngo</div>
+      <img class="logo_img" src="assets/stearn-designs-logo.png">
       <nav>
         <div class="menu">
           <a href="portfolio.html">Portfolio</a>
