--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <h2 class="section-title dynamic-title">What I Do</h2>
   <div class="grid-5">
     <article class="card">
-      <img class="card__img" src="assets/branding.png" alt="Brand work">
+      <img class="card__img" src="assets/branding2.png" alt="Brand work">
       <div class="card__body">
         <h3 class="card__title">Comprehensive Branding</h3>
         <p class="card__text">Striking logos, brand guidelines and systems backed by expert visual communication.</p>
@@ -84,7 +84,7 @@
     </article>
 
     <article class="card">
-      <img class="card__img" src="assets/web-design.png" alt="Web & UI work">
+      <img class="card__img" src="assets/web-design2.png" alt="Web & UI work">
       <div class="card__body">
         <h3 class="card__title">Web Design & UI</h3>
         <p class="card__text">Professional web and UI design, crafted for a high-quality user experience.</p>
@@ -92,15 +92,15 @@
     </article>
 
     <article class="card">
-      <img class="card__img" src="assets/motion.png" alt="Motion content">
+      <img class="card__img" src="assets/motion-design.png" alt="Motion content">
       <div class="card__body">
-        <h3 class="card__title">Motion & Animation</h3>
+        <h3 class="card__title">Motion Design</h3>
         <p class="card__text">Stay on trend with short-form social content or make an impression with distinctive, on-brand animations.</p>
       </div>
     </article>
 
     <article class="card">
-      <img class="card__img" src="assets/social-media.png" alt="Social Media">
+      <img class="card__img" src="assets/social-media-management.png" alt="Social Media">
       <div class="card__body">
         <h3 class="card__title">Social Media Management</h3>
         <p class="card__text">Take the hassle out of social media design and scheduling.</p>
@@ -108,7 +108,7 @@
     </article>
 
     <article class="card">
-      <img class="card__img" src="assets/strategy.png" alt="Strategy">
+      <img class="card__img" src="assets/strategy.png" alt="poster-design">
       <div class="card__body">
         <h3 class="card__title">Poster & Cover Art</h3>
         <p class="card__text">Effective standalone graphics for any business.</p>
