--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </article>
 
     <article class="card">
-      <img class="card__img" src="assets/strategy.png" alt="poster-design">
+      <img class="card__img" src="assets/poster-design.png" alt="Poster Design">
       <div class="card__body">
         <h3 class="card__title">Poster & Cover Art</h3>
         <p class="card__text">Effective standalone graphics for any business.</p>
