--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <div class="hero__content wrap" id="heroContent">
       <div class="eyebrow">Design · Motion · Web</div>
-      <h1>Creative that moves people.</h1>
-      <p>Portfolio-driven studio crafting brand identities, dynamic websites, and scroll-stopping content.</p>
+      <h1>Design With Edge.</h1>
+      <p>Crafting brands, sites, and content that cut through the noise.</p>
 
       <div class="cta" role="group" aria-label="Primary calls to action">
         <a class="btn" href="portfolio.html" role="button" aria-label="View Portfolio">View Portfolio</a>
